System operations implemented

--- a/PS_Server/nbproject/project.properties
+++ b/PS_Server/nbproject/project.properties
@@ -27,11 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/PS_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.lombok-1.18.4.jar=src\\libs\\lombok-1.18.4.jar
 file.reference.PS_CommonLib.jar=..\\..\\PS_CommonLib\\PS_CommonLib\\dist\\PS_CommonLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.PS_CommonLib.jar}
+    ${file.reference.PS_CommonLib.jar}:\
+    ${file.reference.lombok-1.18.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
