--- a/PS_Server/nbproject/project.properties
+++ b/PS_Server/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PS_Server
+application.vendor=nikol
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,19 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/PS_Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\nikol\\Downloads\\AbsoluteLayout.jar
 file.reference.lombok-1.18.4.jar=src\\libs\\lombok-1.18.4.jar
 file.reference.PS_CommonLib.jar=..\\..\\PS_CommonLib\\PS_CommonLib\\dist\\PS_CommonLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.PS_CommonLib.jar}:\
-    ${file.reference.lombok-1.18.4.jar}
+    ${file.reference.lombok-1.18.4.jar}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ps_server.PS_Server
+main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
